force-app/main/default/objects/CampaignMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF( 
ISBLANK(ContactId)=false,  Contact.Account.Name ,  
IF( 
ISBLANK( LeadId )=false,  Lead.Company  ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>