force-app/main/default/objects/CampaignMember/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>IF( 
ISBLANK(ContactId)=false, Contact.Account.LocationCity__c , 
IF( 
ISBLANK( LeadId )=false, Lead.LocationCity__c ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account City</label>
    <type>Text</type>
</CustomField>