force-app/main/default/objects/CampaignMember/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>IF( 
ISBLANK(ContactId)=false, Contact.Account.Id , 
IF( 
ISBLANK( LeadId )=false, Lead.Id ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>