force-app/main/default/objects/CampaignMember/fields/AccountOwnerName__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerName__c</fullName>
    <formula>IF( 
ISBLANK(ContactId)=false, Contact.Account.Owner.FirstName &amp;&quot; &quot; &amp; Contact.Account.Owner.LastName , 
IF( 
ISBLANK( LeadId )=false, Lead.Owner:User.FirstName &amp;&quot; &quot; &amp; Lead.Owner:User.LastName  ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner (Name)</label>
    <type>Text</type>
</CustomField>