force-app/main/default/objects/CampaignMember/fields/AddedByName__c.field-meta.xml
<CustomField>
    <fullName>AddedByName__c</fullName>
    <formula>CreatedBy.LastName &amp; &quot; &quot; &amp; CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added by Name</label>
    <type>Text</type>
</CustomField>