force-app/main/default/objects/CampaignMember/fields/BLC_Refusal__c.field-meta.xml
<CustomField>
    <fullName>BLC_Refusal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BLC Refusal</label>
    <type>Checkbox</type>
</CustomField>