force-app/main/default/objects/CampaignMember/fields/BLC_Refusal_by_Standard_Email__c.field-meta.xml
<CustomField>
    <fullName>BLC_Refusal_by_Standard_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BLC Refusal by Standard Email</label>
    <type>Checkbox</type>
</CustomField>