force-app/main/default/objects/CampaignMember/fields/BLC_Refusal_Date__c.field-meta.xml
<CustomField>
    <fullName>BLC_Refusal_Date__c</fullName>
    <label>BLC Refusal Date</label>
    <type>Date</type>
</CustomField>