force-app/main/default/objects/CampaignMember/fields/BLCCustomer__c.field-meta.xml
<CustomField>
    <fullName>BLCCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BLC Customer</label>
    <type>Checkbox</type>
</CustomField>