force-app/main/default/objects/CampaignMember/fields/BLCPersonalCoverLetter__c.field-meta.xml
<CustomField>
    <fullName>BLCPersonalCoverLetter__c</fullName>
    <label>BLC Personal Cover Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>