force-app/main/default/objects/CampaignMember/fields/BLCRefusalComment__c.field-meta.xml
<CustomField>
    <fullName>BLCRefusalComment__c</fullName>
    <label>BLC Refusal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>