force-app/main/default/objects/CampaignMember/fields/BLCRefusalEmailDeliveryDateTime__c.field-meta.xml
<CustomField>
    <fullName>BLCRefusalEmailDeliveryDateTime__c</fullName>
    <label>BLC Refusal Email Delivery (Date/Time)</label>
    <type>DateTime</type>
</CustomField>