force-app/main/default/objects/CampaignMember/fields/BLCRefusalStage__c.field-meta.xml
<CustomField>
    <fullName>BLCRefusalStage__c</fullName>
    <label>BLC Refusal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Right Away</fullName>
            </value>
            <value>
                <fullName>By MD</fullName>
            </value>
            <value>
                <fullName>After Telephone Interview</fullName>
            </value>
            <value>
                <fullName>After 1st Interview</fullName>
            </value>
            <value>
                <fullName>After 2nd Interview</fullName>
            </value>
            <value>
                <fullName>After 3rd Interview</fullName>
            </value>
            <value>
                <fullName>After 4th Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>