force-app/main/default/objects/CampaignMember/fields/Brochures_sent__c.field-meta.xml
<CustomField>
    <fullName>Brochures_sent__c</fullName>
    <label>Brochures sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MPS Publication</fullName>
            </value>
            <value>
                <fullName>GateB - Image Brochure (A4)</fullName>
            </value>
            <value>
                <fullName>Marketing Performance Check (A4)</fullName>
            </value>
            <value>
                <fullName>CS - Migros/Einkauf (A5)</fullName>
            </value>
            <value>
                <fullName>CS - Migros/Einkauf-Detail (A5, 18 S.)</fullName>
            </value>
            <value>
                <fullName>CS -  Bayer/BM Brand-Portal (A5)</fullName>
            </value>
            <value>
                <fullName>CS -  Franke/BM Marketing-Portal (A5)</fullName>
            </value>
            <value>
                <fullName>CS -  Nationale/BM Marketing-Portal (A5)</fullName>
            </value>
            <value>
                <fullName>CS -  Oerlikon/Censhare (A5)</fullName>
            </value>
            <value>
                <fullName>CS - Amag (A5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>