force-app/main/default/objects/CampaignMember/fields/CampaignJobTitle__c.field-meta.xml
<CustomField>
    <fullName>CampaignJobTitle__c</fullName>
    <description>Zeigt den Job Titel der Recruiting Campaign auf dem Member</description>
    <formula>Campaign.JobTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Job Title</label>
    <type>Text</type>
</CustomField>