force-app/main/default/objects/CampaignMember/fields/CampaignLanguage__c.field-meta.xml
<CustomField>
    <fullName>CampaignLanguage__c</fullName>
    <description>Zeigt die Job Sprache der Recruiting Campaign auf dem Member</description>
    <formula>TEXT(Campaign.JobLanguage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Language</label>
    <type>Text</type>
</CustomField>