force-app/main/default/objects/CampaignMember/fields/Candidate_Refusal__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Refusal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Refusal</label>
    <type>Checkbox</type>
</CustomField>