force-app/main/default/objects/CampaignMember/fields/Candidate_Refusal_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Refusal_Date__c</fullName>
    <label>Candidate Refusal Date</label>
    <type>Date</type>
</CustomField>