force-app/main/default/objects/CampaignMember/fields/Candidate_Refusal_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Refusal_Explanation__c</fullName>
    <label>Candiate Refusal Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>