force-app/main/default/objects/CampaignMember/fields/Candidate_Refusal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Refusal_Stage__c</fullName>
    <label>Candidate Refusal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After Telephone Interview</fullName>
            </value>
            <value>
                <fullName>After 1st Interview</fullName>
            </value>
            <value>
                <fullName>After 2nd Interview</fullName>
            </value>
            <value>
                <fullName>After 3rd Interview</fullName>
            </value>
            <value>
                <fullName>After 4th Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>