force-app/main/default/objects/CampaignMember/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beta Tester A</fullName>
            </value>
            <value>
                <fullName>Beta Tester B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>