force-app/main/default/objects/CampaignMember/fields/CompanionNames__c.field-meta.xml
<CustomField>
    <fullName>CompanionNames__c</fullName>
    <label>Companion Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>