force-app/main/default/objects/CampaignMember/fields/Contact_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Phone__c</fullName>
    <formula>Contact.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner (Phone)</label>
    <type>Text</type>
</CustomField>