force-app/main/default/objects/CampaignMember/fields/Contact_Owner_Phone_external__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Phone_external__c</fullName>
    <formula>Contact.Owner.Phone_external__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner (Phone external)</label>
    <type>Text</type>
</CustomField>