force-app/main/default/objects/CampaignMember/fields/ContactLeadOwnerName__c.field-meta.xml
<CustomField>
    <fullName>ContactLeadOwnerName__c</fullName>
    <formula>IF(
       ISBLANK( LeadId ), 
             Contact.Owner.FirstName + &apos; &apos; + Contact.Owner.LastName,
              Lead.Owner:User.FirstName + &apos; &apos; + Lead.Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Lead Owner (Name)</label>
    <type>Text</type>
</CustomField>