force-app/main/default/objects/CampaignMember/fields/ContactOwnerJobTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactOwnerJobTitle__c</fullName>
    <formula>Contact.Owner.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner (Job Title)</label>
    <type>Text</type>
</CustomField>