force-app/main/default/objects/CampaignMember/fields/CustomerActual__c.field-meta.xml
<CustomField>
    <fullName>CustomerActual__c</fullName>
    <formula>Contact.CustomerActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer (Actual)</label>
    <type>Text</type>
</CustomField>