force-app/main/default/objects/CampaignMember/fields/Date_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Application</label>
    <type>Date</type>
</CustomField>