force-app/main/default/objects/CampaignMember/fields/Date_Time_Confirmation_Email_send__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Confirmation_Email_send__c</fullName>
    <label>Date &amp; Time Confirmation Email send</label>
    <type>DateTime</type>
</CustomField>