force-app/main/default/objects/CampaignMember/fields/DuSieOwner__c.field-meta.xml
<CustomField>
    <fullName>DuSieOwner__c</fullName>
    <formula>TEXT(Contact.DuSieOwner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Du/Sie (Owner)</label>
    <type>Text</type>
</CustomField>