force-app/main/default/objects/CampaignMember/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment</label>
    <type>Checkbox</type>
</CustomField>