force-app/main/default/objects/CampaignMember/fields/Employment_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Date__c</fullName>
    <label>Employment Date</label>
    <type>Date</type>
</CustomField>