force-app/main/default/objects/CampaignMember/fields/EmploymentComment__c.field-meta.xml
<CustomField>
    <fullName>EmploymentComment__c</fullName>
    <label>Employment Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>