force-app/main/default/objects/CampaignMember/fields/Evaluation_By__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_By__c</fullName>
    <label>Evaluation By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>