force-app/main/default/objects/CampaignMember/fields/Follow_UP__c.field-meta.xml
<CustomField>
    <fullName>Follow_UP__c</fullName>
    <label>Follow UP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>