force-app/main/default/objects/CampaignMember/fields/GFMBLCBrief__c.field-meta.xml
<CustomField>
    <fullName>GFMBLCBrief__c</fullName>
    <formula>IF(
OR(MPSJury__c = true,MPSChampion__c=true,MPSParticipant__c=true,BLCCustomer__c=true,NOT(ISBLANK(CustomerActual__c))),&quot;BLC Brief&quot;,

IF(
OR(GFMPlatinMember__c=true,GFMMember__c=true,GFMContact__c=true),&quot;GFM Brief&quot;,&quot;NONE&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFM/BLC Brief</label>
    <type>Text</type>
</CustomField>