force-app/main/default/objects/CampaignMember/fields/GFMBLCstatus__c.field-meta.xml
<CustomField>
    <fullName>GFMBLCstatus__c</fullName>
    <formula>IF(
MPSJury__c=true,&quot;BLC Jury&quot;,

IF(
MPSChampion__c=true,&quot;BLC Champion&quot;,

IF(
MPSParticipant__c=true,&quot;BLC Participant&quot;,

IF(
OR(
BLCCustomer__c=true,
NOT(ISBLANK(CustomerActual__c))
),
&quot;BLC Customer&quot;,

IF(
GFMPlatinMember__c=true,&quot;GFM Platin Member&quot;,

IF(
GFMMember__c=true,&quot;GFM Member&quot;,

IF(
 GFMContact__c=true,&quot;GFM Contact&quot;,

&quot;No Result&quot;
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFM/BLC Status</label>
    <type>Text</type>
</CustomField>