force-app/main/default/objects/CampaignMember/fields/GFMContact__c.field-meta.xml
<CustomField>
    <fullName>GFMContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GFM Contact</label>
    <type>Checkbox</type>
</CustomField>