force-app/main/default/objects/CampaignMember/fields/GFMMember__c.field-meta.xml
<CustomField>
    <fullName>GFMMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GFM Member</label>
    <type>Checkbox</type>
</CustomField>