force-app/main/default/objects/CampaignMember/fields/GFMPlatinMember__c.field-meta.xml
<CustomField>
    <fullName>GFMPlatinMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GFM Platin Member</label>
    <type>Checkbox</type>
</CustomField>