force-app/main/default/objects/CampaignMember/fields/Job_Situation__c.field-meta.xml
<CustomField>
    <fullName>Job_Situation__c</fullName>
    <formula>Text( Contact.JobSituation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Situation</label>
    <type>Text</type>
</CustomField>