force-app/main/default/objects/CampaignMember/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>IF( 
ISBLANK( LeadId ), 
Contact.JobTitle__c, 
Lead.JobTitle__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>