force-app/main/default/objects/CampaignMember/fields/KompilateDelivered__c.field-meta.xml
<CustomField>
    <fullName>KompilateDelivered__c</fullName>
    <label>Kompilate Delivered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAS</fullName>
            </value>
            <value>
                <fullName>FLO</fullName>
            </value>
            <value>
                <fullName>HFP</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>