force-app/main/default/objects/CampaignMember/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <formula>IF( 
ISBLANK(ContactId)=false, &quot;Contact&quot;, 
IF( 
ISBLANK( LeadId )=false, &quot;Lead&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact</label>
    <type>Text</type>
</CustomField>