force-app/main/default/objects/CampaignMember/fields/MPSChampion__c.field-meta.xml
<CustomField>
    <fullName>MPSChampion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPS Champion</label>
    <type>Checkbox</type>
</CustomField>