force-app/main/default/objects/CampaignMember/fields/MPSJury__c.field-meta.xml
<CustomField>
    <fullName>MPSJury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPS Jury</label>
    <type>Checkbox</type>
</CustomField>