force-app/main/default/objects/CampaignMember/fields/MPSParticipant__c.field-meta.xml
<CustomField>
    <fullName>MPSParticipant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPS Participant</label>
    <type>Checkbox</type>
</CustomField>