force-app/main/default/objects/CampaignMember/fields/No_Calls__c.field-meta.xml
<CustomField>
    <fullName>No_Calls__c</fullName>
    <formula>IF(
ISBLANK(ContactId)=false, Contact.NoCalls__c,
IF(
ISBLANK( LeadId )=false,  Lead.NoCalls__c  ,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Calls</label>
    <type>Checkbox</type>
</CustomField>