force-app/main/default/objects/CampaignMember/fields/No_Contact_at_all__c.field-meta.xml
<CustomField>
    <fullName>No_Contact_at_all__c</fullName>
    <formula>IF(
ISBLANK(ContactId)=false, Contact.NoContactAtAll__c,
IF(
ISBLANK( LeadId )=false,  Lead.NoContactAtAll__c  ,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Contact at all</label>
    <type>Checkbox</type>
</CustomField>