force-app/main/default/objects/CampaignMember/fields/No_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_Emails__c</fullName>
    <formula>IF(
ISBLANK(ContactId)=false, Contact.NoEmails__c,
IF(
ISBLANK( LeadId )=false,  Lead.NoEmails__c  ,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Emails</label>
    <type>Checkbox</type>
</CustomField>