force-app/main/default/objects/CampaignMember/fields/On_Hold_Comment__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Comment__c</fullName>
    <label>On Hold Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>