force-app/main/default/objects/CampaignMember/fields/PartyStyle__c.field-meta.xml
<CustomField>
    <fullName>PartyStyle__c</fullName>
    <label>Party Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summer in the City</fullName>
            </value>
            <value>
                <fullName>Casino Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>