force-app/main/default/objects/CampaignMember/fields/Possible_Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Possible_Date_of_Joining__c</fullName>
    <label>Possible Date of Joining</label>
    <type>Date</type>
</CustomField>