force-app/main/default/objects/CampaignMember/fields/Possible_Workload__c.field-meta.xml
<CustomField>
    <fullName>Possible_Workload__c</fullName>
    <label>Possible Workload</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>