force-app/main/default/objects/CampaignMember/fields/PostalAddress__c.field-meta.xml
<CustomField>
    <fullName>PostalAddress__c</fullName>
    <formula>IF(
NOT(ISBLANK(ContactId )),
 Contact.LocationAddressLine2__c &amp; &quot; / &quot; &amp; Contact.LocationStreetNr__c &amp;&quot; / &quot; &amp; Contact.LocationAddressLine3__c &amp; &quot; / &quot; &amp; Contact.LocationPoBox__c &amp; &quot; / &quot; &amp; Contact.LocationZip__c &amp; &quot; &quot; &amp; Contact.LocationCity__c &amp; &quot; / &quot; &amp; TEXT(Contact.LocationCountry__c),
 Lead.LocationAddressLine2__c &amp; &quot; / &quot; &amp; Lead.LocationStreetNr__c &amp; &quot; / &quot; &amp; Lead.LocationAddressLine3__c &amp; &quot; / &quot; &amp; Lead.LocationPoBox__c &amp; &quot; / &quot; &amp; Lead.LocationZip__c &amp; &quot; &quot; &amp; Lead.LocationCity__c &amp; &quot; / &quot; &amp; TEXT(Lead.LocationCountry__c))</formula>
    <label>Postal Address</label>
    <type>Text</type>
</CustomField>