force-app/main/default/objects/CampaignMember/fields/Potential_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Potential_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Candidate</label>
    <type>Checkbox</type>
</CustomField>