force-app/main/default/objects/CampaignMember/fields/Private_City__c.field-meta.xml
<CustomField>
    <fullName>Private_City__c</fullName>
    <formula>Contact.PrivateCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private City</label>
    <type>Text</type>
</CustomField>