force-app/main/default/objects/CampaignMember/fields/Private_Country__c.field-meta.xml
<CustomField>
    <fullName>Private_Country__c</fullName>
    <formula>Text(Contact.PrivateCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Country</label>
    <type>Text</type>
</CustomField>