force-app/main/default/objects/CampaignMember/fields/Private_Email__c.field-meta.xml
<CustomField>
    <fullName>Private_Email__c</fullName>
    <formula>Contact.PrivateEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Email</label>
    <type>Text</type>
</CustomField>