force-app/main/default/objects/CampaignMember/fields/Private_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Private_Mobile__c</fullName>
    <formula>Contact.PrivateMobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Mobile</label>
    <type>Text</type>
</CustomField>