force-app/main/default/objects/CampaignMember/fields/Private_State__c.field-meta.xml
<CustomField>
    <fullName>Private_State__c</fullName>
    <formula>Contact.PrivateState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private State</label>
    <type>Text</type>
</CustomField>