force-app/main/default/objects/CampaignMember/fields/Private_Street_Nr__c.field-meta.xml
<CustomField>
    <fullName>Private_Street_Nr__c</fullName>
    <formula>Contact.PrivateStreetNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Street, Nr</label>
    <type>Text</type>
</CustomField>