force-app/main/default/objects/CampaignMember/fields/Private_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Private_ZIP__c</fullName>
    <formula>Contact.PrivateZip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private ZIP</label>
    <type>Text</type>
</CustomField>