force-app/main/default/objects/CampaignMember/fields/ReasonForRejection__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>