force-app/main/default/objects/CampaignMember/fields/Salary_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations__c</fullName>
    <label>Salary Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>