force-app/main/default/objects/CampaignMember/fields/Salutation_DE__c.field-meta.xml
<CustomField>
    <fullName>Salutation_DE__c</fullName>
    <formula>CASE( Salutation ,&quot;Mr.&quot;,&quot;Herr&quot;,&quot;Ms.&quot;,&quot;Frau&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation (DE)</label>
    <type>Text</type>
</CustomField>