force-app/main/default/objects/CampaignMember/fields/Salutation_for_Letter__c.field-meta.xml
<CustomField>
    <fullName>Salutation_for_Letter__c</fullName>
    <formula>IF(
AND(
 DuSieOwner__c =&quot;Du&quot;,
 TEXT(Contact.Salutation) = &quot;Mr.&quot;
),

&quot;Lieber &quot; &amp; Contact.FirstName,

IF(
AND(
 DuSieOwner__c =&quot;Du&quot;,
 TEXT(Contact.Salutation) = &quot;Ms.&quot;
),

&quot;Liebe &quot; &amp; Contact.FirstName,

IF(
AND(
 DuSieOwner__c =&quot;Sie&quot;,
 TEXT(Contact.Salutation) = &quot;Mr.&quot;
),

&quot;Sehr geehrter Herr &quot; &amp; Contact.LastName,

IF(
AND(
 DuSieOwner__c =&quot;Sie&quot;,
 TEXT(Contact.Salutation) = &quot;Ms.&quot;
),

&quot;Sehr geehrte Frau &quot; &amp; Contact.LastName,

&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation for Letter</label>
    <type>Text</type>
</CustomField>