force-app/main/default/objects/CampaignMember/fields/SalutationforEmail__c.field-meta.xml
<CustomField>
    <fullName>SalutationforEmail__c</fullName>
    <formula>IF(
ISBLANK( ContactId ) = true,


IF(TEXT(Lead.Salutation) = &quot;Mr.&quot;,&quot;Sehr geehrter Herr &quot; &amp; Lead.LastName,
IF(Text(Lead.Salutation) = &quot;Ms.&quot;,&quot;Sehr geehrte Frau &quot; &amp; Lead.LastName,
&quot;Sehr geehrte/r Frau/Herr &quot; &amp; Lead.LastName))
,
IF(TEXT(Contact.Salutation) = &quot;Mr.&quot;,&quot;Sehr geehrter Herr &quot; &amp; Contact.LastName,
IF(Text(Contact.Salutation) = &quot;Ms.&quot;,&quot;Sehr geehrte Frau &quot; &amp; Contact.LastName,
&quot;Sehr geehrte/r Frau/Herr &quot; &amp; Contact.LastName))


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation for Email</label>
    <type>Text</type>
</CustomField>