force-app/main/default/objects/CampaignMember/fields/Segment_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Segment_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment: Analytics</label>
    <type>Checkbox</type>
</CustomField>