force-app/main/default/objects/CampaignMember/fields/Segment_Operations__c.field-meta.xml
<CustomField>
    <fullName>Segment_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segment: Operations</label>
    <type>Checkbox</type>
</CustomField>