force-app/main/default/objects/CampaignMember/fields/Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Dieses Feld wird bei der Erstellung des Campaign Members automatisch auf true gesetzt, was dazu führt, dass das Bestätigungsemail sofort verschickt wird. 29.08.2017, ary.</description>
    <label>Send Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>