force-app/main/default/objects/CampaignMember/fields/SubscribeUnsubscribeDate__c.field-meta.xml
<CustomField>
    <fullName>SubscribeUnsubscribeDate__c</fullName>
    <label>Subscribe / Unsubscribe Date</label>
    <type>Date</type>
</CustomField>