force-app/main/default/objects/CampaignMember/fields/SupplierIndustry__c.field-meta.xml
<CustomField>
    <fullName>SupplierIndustry__c</fullName>
    <label>Supplier - Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>