force-app/main/default/objects/CampaignMember/fields/Synfluence_Contact__c.field-meta.xml
<CustomField>
    <fullName>Synfluence_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synfluence Contact</label>
    <type>Checkbox</type>
</CustomField>