force-app/main/default/objects/CampaignMember/fields/Telephone_Comments__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Comments__c</fullName>
    <label>Telephone - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>