force-app/main/default/objects/CampaignMember/fields/Telephone_Date__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Date__c</fullName>
    <label>Telephone - Date</label>
    <type>Date</type>
</CustomField>