force-app/main/default/objects/CampaignMember/fields/Unit_s_Worked_For__c.field-meta.xml
<CustomField>
    <fullName>Unit_s_Worked_For__c</fullName>
    <label>Unit(s) Worked For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BLM</fullName>
            </value>
            <value>
                <fullName>BY</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>GBCH</fullName>
            </value>
            <value>
                <fullName>GB DE</fullName>
            </value>
            <value>
                <fullName>GB SGP</fullName>
            </value>
            <value>
                <fullName>GBUS</fullName>
            </value>
            <value>
                <fullName>GCH</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>HYS</fullName>
            </value>
            <value>
                <fullName>KNO</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SVH</fullName>
            </value>
            <value>
                <fullName>VH</fullName>
            </value>
            <value>
                <fullName>XB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>