force-app/main/default/objects/CampaignMember/fields/WithCompanion__c.field-meta.xml
<CustomField>
    <fullName>WithCompanion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Companion</label>
    <type>Checkbox</type>
</CustomField>