force-app/main/default/objects/CampaignMember/fields/X1st_Participants__c.field-meta.xml
<CustomField>
    <fullName>X1st_Participants__c</fullName>
    <label>1st - Participants</label>
    <type>TextArea</type>
</CustomField>