force-app/main/default/objects/CampaignMember/fields/X1stGenericImpression__c.field-meta.xml
<CustomField>
    <fullName>X1stGenericImpression__c</fullName>
    <label>1st - Generic Impression</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>