force-app/main/default/objects/CampaignMember/fields/X1stInviteFor2nd__c.field-meta.xml
<CustomField>
    <fullName>X1stInviteFor2nd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st - Invite for 2nd</label>
    <type>Checkbox</type>
</CustomField>