force-app/main/default/objects/CampaignMember/fields/X2nd_Comments__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Comments__c</fullName>
    <label>2nd - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>