force-app/main/default/objects/CampaignMember/fields/X2nd_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Date__c</fullName>
    <label>2nd - Date</label>
    <type>Date</type>
</CustomField>