force-app/main/default/objects/CampaignMember/fields/X2nd_Participants__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Participants__c</fullName>
    <label>2nd - Participants</label>
    <type>TextArea</type>
</CustomField>