force-app/main/default/objects/CampaignMember/fields/X3rd_Comments__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Comments__c</fullName>
    <label>3rd - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>